--- a/src/Core/CrestApps.OrchardCore.Payments.Abstractions/CrestApps.OrchardCore.Payments.Abstractions.csproj
+++ b/src/Core/CrestApps.OrchardCore.Payments.Abstractions/CrestApps.OrchardCore.Payments.Abstractions.csproj
@@ -15,4 +15,8 @@
     <Content Remove="CrestAppsLogo.png" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Html.Abstractions" />
+  </ItemGroup>
+
 </Project>
