--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
     <CentralPackageTransitivePinningEnabled>true</CentralPackageTransitivePinningEnabled>
-    <OrchardCoreVersion>2.0.0-preview-18325</OrchardCoreVersion>
+    <OrchardCoreVersion>2.0.0</OrchardCoreVersion>
   </PropertyGroup>
 
   <PropertyGroup>
