--- a/.github/workflows/release_ci.yml
+++ b/.github/workflows/release_ci.yml
@@ -38,7 +38,7 @@ jobs:
         dotnet-version: '8.0.x'
     - name: Set build number 
       if: matrix.os == 'ubuntu-latest'
-      run: echo "BuildNumber=$(( $GITHUB_RUN_NUMBER + 15471 ))" >> $GITHUB_ENV
+      run: echo "BuildNumber=$(( $GITHUB_RUN_NUMBER ))" >> $GITHUB_ENV
     - name: Build
       # NuGetAudit is intentionally not disabled here like it is for other CI builds, because we need to address any
       # vulnerable packages before releasing a new version.
