--- a/src/Common/CrestApps.Support/CrestApps.Support.csproj
+++ b/src/Common/CrestApps.Support/CrestApps.Support.csproj
@@ -11,4 +11,8 @@
     <PackageTags>$(PackageTags) CrestApps Support</PackageTags>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="C:\Code\CrestApps\CrestApps.OrchardCore\src\/CrestAppsLogo.png" />
+  </ItemGroup>
+
 </Project>
