--- a/src/Core/CrestApps.OrchardCore.Abstractions/CrestApps.OrchardCore.Abstractions.csproj
+++ b/src/Core/CrestApps.OrchardCore.Abstractions/CrestApps.OrchardCore.Abstractions.csproj
@@ -12,4 +12,8 @@
     <PackageTags>$(PackageTags) CrestApps OrchardCoreCMS Abstractions</PackageTags>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="C:\Code\CrestApps\CrestApps.OrchardCore\src\/CrestAppsLogo.png" />
+  </ItemGroup>
+
 </Project>
