--- a/src/Modules/CrestApps.OrchardCore.Users/CrestApps.OrchardCore.Users.csproj
+++ b/src/Modules/CrestApps.OrchardCore.Users/CrestApps.OrchardCore.Users.csproj
@@ -12,6 +12,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="C:\Code\CrestApps\CrestApps.OrchardCore\src\/CrestAppsLogo.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
