--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -4,38 +4,41 @@
     <CentralPackageTransitivePinningEnabled>true</CentralPackageTransitivePinningEnabled>
     <OrchardCoreVersion>[2.0.0,3.0.0)</OrchardCoreVersion>
   </PropertyGroup>
-
   <PropertyGroup>
     <!-- Special case - this property is used by a DotNetCliToolReference -->
     <DotNetXunitVersion>2.3.0</DotNetXunitVersion>
   </PropertyGroup>
-
   <ItemGroup>
-    <!-- Miscellaneous Packages -->
-
     <!-- OrchardCore Packages -->
-    <PackageVersion Include="OrchardCore.DisplayManagement.Abstractions" Version="$(OrchardCoreVersion)"/>
-    <PackageVersion Include="OrchardCore.DisplayManagement" Version="$(OrchardCoreVersion)"/>
-    <PackageVersion Include="OrchardCore.Users.Abstractions" Version="$(OrchardCoreVersion)"/>
-    <PackageVersion Include="OrchardCore.Users.Core" Version="$(OrchardCoreVersion)"/>
-    <PackageVersion Include="OrchardCore.Infrastructure.Abstractions" Version="$(OrchardCoreVersion)"/>
-    <PackageVersion Include="OrchardCore.Liquid.Abstractions" Version="$(OrchardCoreVersion)"/>
-    <PackageVersion Include="OrchardCore.ContentFields" Version="$(OrchardCoreVersion)"/>
-    <PackageVersion Include="OrchardCore.Contents" Version="$(OrchardCoreVersion)"/>
-    <PackageVersion Include="OrchardCore.ContentTypes" Version="$(OrchardCoreVersion)"/>
-    <PackageVersion Include="OrchardCore.ContentTypes.Abstractions" Version="$(OrchardCoreVersion)"/>
-    <PackageVersion Include="OrchardCore.ContentManagement" Version="$(OrchardCoreVersion)"/>
-    <PackageVersion Include="OrchardCore.ContentManagement.Abstractions" Version="$(OrchardCoreVersion)"/>
-    <PackageVersion Include="OrchardCore.Media" Version="$(OrchardCoreVersion)"/>
-    <PackageVersion Include="OrchardCore.Module.Targets" Version="$(OrchardCoreVersion)"/>
-    <PackageVersion Include="OrchardCore.Navigation.Core" Version="$(OrchardCoreVersion)"/>
-    <PackageVersion Include="OrchardCore.Logging.NLog" Version="$(OrchardCoreVersion)"/>
-    <PackageVersion Include="OrchardCore.Application.Cms.Core.Targets" Version="$(OrchardCoreVersion)"/>
-    <PackageVersion Include="TheAdmin" Version="$(OrchardCoreVersion)"/>
-    <PackageVersion Include="TheTheme" Version="$(OrchardCoreVersion)"/>
-    <PackageVersion Include="SafeMode" Version="$(OrchardCoreVersion)"/>
-    <PackageVersion Include="TheAgencyTheme" Version="$(OrchardCoreVersion)"/>
-    <PackageVersion Include="TheComingSoonTheme" Version="$(OrchardCoreVersion)"/>
-    <PackageVersion Include="TheBlogTheme" Version="$(OrchardCoreVersion)"/>
+    <PackageVersion Include="OrchardCore.DisplayManagement.Abstractions" Version="$(OrchardCoreVersion)" />
+    <PackageVersion Include="OrchardCore.DisplayManagement" Version="$(OrchardCoreVersion)" />
+    <PackageVersion Include="OrchardCore.Data.Abstractions" Version="$(OrchardCoreVersion)" />
+    <PackageVersion Include="OrchardCore.Users.Abstractions" Version="$(OrchardCoreVersion)" />
+    <PackageVersion Include="OrchardCore.Users.Core" Version="$(OrchardCoreVersion)" />
+    <PackageVersion Include="OrchardCore.Infrastructure.Abstractions" Version="$(OrchardCoreVersion)" />
+    <PackageVersion Include="OrchardCore.Liquid.Abstractions" Version="$(OrchardCoreVersion)" />
+    <PackageVersion Include="OrchardCore.ContentFields" Version="$(OrchardCoreVersion)" />
+    <PackageVersion Include="OrchardCore.Contents" Version="$(OrchardCoreVersion)" />
+    <PackageVersion Include="OrchardCore.ContentTypes" Version="$(OrchardCoreVersion)" />
+    <PackageVersion Include="OrchardCore.ContentTypes.Abstractions" Version="$(OrchardCoreVersion)" />
+    <PackageVersion Include="OrchardCore.ContentManagement" Version="$(OrchardCoreVersion)" />
+    <PackageVersion Include="OrchardCore.ContentManagement.Abstractions" Version="$(OrchardCoreVersion)" />
+    <PackageVersion Include="OrchardCore.ResourceManagement" Version="$(OrchardCoreVersion)" />
+    <PackageVersion Include="OrchardCore.Media" Version="$(OrchardCoreVersion)" />
+    <PackageVersion Include="OrchardCore.Module.Targets" Version="$(OrchardCoreVersion)" />
+    <PackageVersion Include="OrchardCore.Navigation.Core" Version="$(OrchardCoreVersion)" />
+    <PackageVersion Include="OrchardCore.Logging.NLog" Version="$(OrchardCoreVersion)" />
+    <PackageVersion Include="OrchardCore.Application.Cms.Core.Targets" Version="$(OrchardCoreVersion)" />
+    <PackageVersion Include="OrchardCore.Search.AzureAI.Core" Version="$(OrchardCoreVersion)" />
+    <PackageVersion Include="TheAdmin" Version="$(OrchardCoreVersion)" />
+    <PackageVersion Include="TheTheme" Version="$(OrchardCoreVersion)" />
+    <PackageVersion Include="SafeMode" Version="$(OrchardCoreVersion)" />
+    <PackageVersion Include="TheAgencyTheme" Version="$(OrchardCoreVersion)" />
+    <PackageVersion Include="TheComingSoonTheme" Version="$(OrchardCoreVersion)" />
+    <PackageVersion Include="TheBlogTheme" Version="$(OrchardCoreVersion)" />
+
+    <!-- Miscellaneous Packages -->
+    <PackageVersion Include="Azure.Identity" Version="1.13.1" />
+    <PackageVersion Include="Azure.ResourceManager.CognitiveServices" Version="1.4.0" />
   </ItemGroup>
 </Project>
