--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -40,5 +40,6 @@
     <!-- Miscellaneous Packages -->
     <PackageVersion Include="Azure.Identity" Version="1.13.1" />
     <PackageVersion Include="Azure.ResourceManager.CognitiveServices" Version="1.4.0" />
+    <PackageVersion Include="YesSql.Abstractions" Version="5.1.1" />
   </ItemGroup>
 </Project>
