--- a/src/Startup/CrestApps.OrchardCore.Cms.Web/NLog.config
+++ b/src/Startup/CrestApps.OrchardCore.Cms.Web/NLog.config
@@ -13,7 +13,7 @@
     <targets>
         <!-- file target -->
         <target xsi:type="File" name="file"
-                fileName="${var:configDir}/App_Data/logs/orchard-log-${shortdate}.log"
+                fileName="${var:configDir}/logs/orchard-log-${shortdate}.log"
                 layout="${longdate}|${orchard-tenant-name}|${aspnet-traceidentifier}|${event-properties:item=EventId}|${logger}|${uppercase:${level}}|${message} ${exception:format=ToString,StackTrace}"
         />
 
@@ -24,7 +24,7 @@
 
     <rules>
         <!-- all warnings and above go to the file target -->
-        <logger name="*" minlevel="Warn" writeTo="file" />
+        <logger name="*" minlevel="Debug" writeTo="file" />
 
         <!-- the hosting lifetime events go to the console and file targets -->
         <logger name="Microsoft.Hosting.Lifetime" minlevel="Info" writeTo="file, console" />
