use custom markdown service and fix chat with Azure SearchAI

--- a/src/Core/CrestApps.OrchardCore.OpenAI.Core/CrestApps.OrchardCore.OpenAI.Core.csproj
+++ b/src/Core/CrestApps.OrchardCore.OpenAI.Core/CrestApps.OrchardCore.OpenAI.Core.csproj
@@ -4,6 +4,7 @@
     <PackageReference Include="YesSql.Abstractions" />
     <PackageReference Include="OrchardCore.ContentManagement.Abstractions" />
     <PackageReference Include="OrchardCore.Liquid.Abstractions" />
+    <PackageReference Include="Markdig" />
   </ItemGroup>
 
   <ItemGroup>
