--- a/src/Core/CrestApps.OrchardCore.OpenAI.Azure.Core/CrestApps.OrchardCore.OpenAI.Azure.Core.csproj
+++ b/src/Core/CrestApps.OrchardCore.OpenAI.Azure.Core/CrestApps.OrchardCore.OpenAI.Azure.Core.csproj
@@ -1,11 +1,20 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
+
+  <PropertyGroup>
+    <Title>CrestApps OrchardCore Azure OpenAI Core</Title>
+    <Description>
+      $(CrestAppsDescription)
+
+      Core services project for Azure OpenAI project.
+    </Description>
+    <PackageTags>$(PackageTags) Azure OpenAI</PackageTags>
+  </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Azure.Identity" />
     <PackageReference Include="Azure.ResourceManager.CognitiveServices" />
     <PackageReference Include="OrchardCore.Data.Abstractions" />
     <PackageReference Include="OrchardCore.Search.AzureAI.Core" />
-
   </ItemGroup>
 
   <ItemGroup>
