--- a/src/Core/CrestApps.OrchardCore.OpenAI.Core/CrestApps.OrchardCore.OpenAI.Core.csproj
+++ b/src/Core/CrestApps.OrchardCore.OpenAI.Core/CrestApps.OrchardCore.OpenAI.Core.csproj
@@ -1,5 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <PropertyGroup>
+    <Title>CrestApps OrchardCore OpenAI Core</Title>
+    <Description>
+      $(CrestAppsDescription)
+
+      Core services project for the OpenAI module.
+    </Description>
+    <PackageTags>$(PackageTags) OpenAI</PackageTags>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="YesSql.Abstractions" />
     <PackageReference Include="OrchardCore.ContentManagement.Abstractions" />
