--- a/src/Modules/CrestApps.OrchardCore.Resources/CrestApps.OrchardCore.Resources.csproj
+++ b/src/Modules/CrestApps.OrchardCore.Resources/CrestApps.OrchardCore.Resources.csproj
@@ -1,5 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
+  <PropertyGroup>
+    <RootNamespace>$(MSBuildProjectName)</RootNamespace>
+    <Title>CrestApps OrchardCore Resources Module</Title>
+    <Description>
+      $(CrestAppsDescription)
+
+      Extends the Resources module with additional reusable scripts and stylesheets.
+    </Description>
+    <PackageTags>$(PackageTags) OrchardCoreCMS Resources</PackageTags>
+  </PropertyGroup>
+
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
