--- a/.github/workflows/main_ci.yml
+++ b/.github/workflows/main_ci.yml
@@ -28,8 +28,8 @@ jobs:
       with:
         node-version: "15"
     - uses: actions/setup-dotnet@v4
-      with:
-        dotnet-version: '8.0.x'
+     # with:
+     #   dotnet-version: '8.0.x'
     - name: Build
       # See pr_ci.yml for the reason why we disable NuGet audit warnings.
       run: |
