--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -2,7 +2,24 @@
 
   <!-- Default TFMs to use when building and packaging -->
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+
+    <!-- TFM used when coding in Visual Studio and when creating templates -->
+    <!-- All 'template.json' should provide a 'choice' for the default TFM -->
+    <DefaultTargetFramework Condition="'$(DefaultTargetFramework)' == ''">net9.0</DefaultTargetFramework>
+
+    <!-- TFMs used to build the abstractions and modules, by convention the default TFM is at the first position -->
+    <!-- In a cross-targeting build, some assets are only copied on the first TFM, by convention the default TFM -->
+    <CommonTargetFrameworks Condition="'$(CommonTargetFrameworks)' == ''">net8.0;net9.0</CommonTargetFrameworks>
+  </PropertyGroup>
+
+  <!-- Detect if the solution is opened in VS to limit the TFMs that are analyzed by Roslyn for performance reasons -->
+  <PropertyGroup Condition="'$(BuildingInsideVisualStudio)' == 'true' or '$(BuildingByReSharper)' == 'true'">
+    <CommonTargetFrameworks>$(DefaultTargetFramework)</CommonTargetFrameworks>
+  </PropertyGroup>
+
+  <!-- Default TFMs to use when building and packaging -->
+  <PropertyGroup>
+    <TargetFrameworks>$(CommonTargetFrameworks)</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Authors>Mike Alhayek</Authors>
     <Company>CrestApps</Company>
