--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -38,7 +38,6 @@
     <!-- Miscellaneous Packages -->
     <PackageVersion Include="Azure.Identity" Version="1.13.1" />
     <PackageVersion Include="Azure.ResourceManager.CognitiveServices" Version="1.4.0" />
-    <PackageVersion Include="Microsoft.Extensions.Http.Resilience" Version="9.0.0" />
     <PackageVersion Include="YesSql.Abstractions" Version="5.1.1" />
     <PackageVersion Include="Markdig" Version="0.39.1" />
     <PackageVersion Include="coverlet.collector" Version="6.0.3" />
@@ -46,4 +45,13 @@
     <PackageVersion Include="xunit" Version="2.9.2" />
     <PackageVersion Include="xunit.runner.visualstudio" Version="3.0.0" />
   </ItemGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'net9.0'">
+    <PackageVersion Include="Microsoft.Extensions.Http.Resilience" Version="9.0.0" />
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
+    <PackageVersion Include="Microsoft.Extensions.Http.Resilience" Version="8.10.0" />
+  </ItemGroup>
+
 </Project>
