--- a/.github/workflows/preview_ci.yml
+++ b/.github/workflows/preview_ci.yml
@@ -27,8 +27,9 @@ jobs:
         node-version: "15"
     - uses: actions/setup-dotnet@v4
       if: steps.check-publish.outputs.should-publish == 'true'
-     # with:
-     #   dotnet-version: '8.0.x'
+      with:
+        dotnet-version: '8.0.x'
+        dotnet-version: '9.0.x'
     - name: Set build number
       if: steps.check-publish.outputs.should-publish == 'true'
       run: echo "BuildNumber=$(( $GITHUB_RUN_NUMBER ))" >> $GITHUB_ENV
