--- a/.github/workflows/pr_ci.yml
+++ b/.github/workflows/pr_ci.yml
@@ -22,8 +22,9 @@ jobs:
       with:
         node-version: "15"
     - uses: actions/setup-dotnet@v4
-     # with:
-     #   dotnet-version: '8.0.x'
+      with:
+        dotnet-version: '8.0.x'
+        dotnet-version: '9.0.x'
     - name: Build
       # We disable NuGet audit warnings, see https://learn.microsoft.com/en-us/nuget/reference/errors-and-warnings/nu1901-nu1904.
       # Security issues being discovered in NuGet packages we use can happen at any time, and thus all our CI builds that
