--- a/.github/workflows/release_ci.yml
+++ b/.github/workflows/release_ci.yml
@@ -34,8 +34,9 @@ jobs:
       with:
         node-version: "15"
     - uses: actions/setup-dotnet@v4
-      # with:
-      #  dotnet-version: '8.0.x'
+      with:
+        dotnet-version: '8.0.x'
+        dotnet-version: '9.0.x'
     - name: Set build number 
       if: matrix.os == 'ubuntu-latest'
       run: echo "BuildNumber=$(( $GITHUB_RUN_NUMBER ))" >> $GITHUB_ENV
