--- a/.github/workflows/release_ci.yml
+++ b/.github/workflows/release_ci.yml
@@ -35,8 +35,9 @@ jobs:
         node-version: "15"
     - uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: '8.0.x'
-        dotnet-version: '9.0.x'
+        dotnet-version: |
+          8.0.x
+          9.0.x
     - name: Set build number 
       if: matrix.os == 'ubuntu-latest'
       run: echo "BuildNumber=$(( $GITHUB_RUN_NUMBER ))" >> $GITHUB_ENV
