use Microsoft.Extensions.AI

--- a/src/Abstractions/CrestApps.OrchardCore.OpenAI.Abstractions/CrestApps.OrchardCore.OpenAI.Abstractions.csproj
+++ b/src/Abstractions/CrestApps.OrchardCore.OpenAI.Abstractions/CrestApps.OrchardCore.OpenAI.Abstractions.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="OrchardCore.Infrastructure.Abstractions" />
+    <PackageReference Include="Microsoft.Extensions.AI.Abstractions" />
   </ItemGroup>
 
 </Project>
