--- a/src/Core/CrestApps.OrchardCore.DeepSeek.Core/CrestApps.OrchardCore.DeepSeek.Core.csproj
+++ b/src/Core/CrestApps.OrchardCore.DeepSeek.Core/CrestApps.OrchardCore.DeepSeek.Core.csproj
@@ -11,6 +11,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.AI.Abstractions" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\Abstractions\CrestApps.OrchardCore.AI.Abstractions\CrestApps.OrchardCore.AI.Abstractions.csproj" />
     <ProjectReference Include="..\CrestApps.OrchardCore.AI.Core\CrestApps.OrchardCore.AI.Core.csproj" />
   </ItemGroup>
