Finish the implementation after testing

--- a/src/Modules/CrestApps.OrchardCore.DeepSeek/CrestApps.OrchardCore.DeepSeek.csproj
+++ b/src/Modules/CrestApps.OrchardCore.DeepSeek/CrestApps.OrchardCore.DeepSeek.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="OrchardCore.ContentManagement" />
     <PackageReference Include="OrchardCore.ContentTypes.Abstractions" />
     <PackageReference Include="OrchardCore.DisplayManagement" />
+    <PackageReference Include="OrchardCore.ResourceManagement" />
   </ItemGroup>
 
   <ItemGroup>
