--- a/src/Core/CrestApps.OrchardCore.DeepSeek.Core/CrestApps.OrchardCore.DeepSeek.Core.csproj
+++ b/src/Core/CrestApps.OrchardCore.DeepSeek.Core/CrestApps.OrchardCore.DeepSeek.Core.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.AI.Abstractions" />
+    <PackageReference Include="Microsoft.Extensions.Http.Resilience" />
   </ItemGroup>
 
   <ItemGroup>
