--- a/src/Core/CrestApps.OrchardCore.DeepSeek.Core/CrestApps.OrchardCore.DeepSeek.Core.csproj
+++ b/src/Core/CrestApps.OrchardCore.DeepSeek.Core/CrestApps.OrchardCore.DeepSeek.Core.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Abstractions\CrestApps.OrchardCore.AI.Abstractions\CrestApps.OrchardCore.AI.Abstractions.csproj" />
+    <ProjectReference Include="..\..\Common\CrestApps.Extensions.AI.DeepSeek\CrestApps.Extensions.AI.DeepSeek.csproj" />
     <ProjectReference Include="..\CrestApps.OrchardCore.AI.Core\CrestApps.OrchardCore.AI.Core.csproj" />
   </ItemGroup>
 
