--- a/src/Core/CrestApps.OrchardCore.DeepSeek.Core/CrestApps.OrchardCore.DeepSeek.Core.csproj
+++ b/src/Core/CrestApps.OrchardCore.DeepSeek.Core/CrestApps.OrchardCore.DeepSeek.Core.csproj
@@ -11,13 +11,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.AI.Abstractions" />
-    <PackageReference Include="Microsoft.Extensions.Http.Resilience" />
+    <PackageReference Include="Microsoft.Extensions.AI" />
+    <PackageReference Include="Microsoft.Extensions.AI.OpenAI" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\Abstractions\CrestApps.OrchardCore.AI.Abstractions\CrestApps.OrchardCore.AI.Abstractions.csproj" />
-    <ProjectReference Include="..\..\Common\CrestApps.Extensions.AI.DeepSeek\CrestApps.Extensions.AI.DeepSeek.csproj" />
     <ProjectReference Include="..\CrestApps.OrchardCore.AI.Core\CrestApps.OrchardCore.AI.Core.csproj" />
   </ItemGroup>
 
